# telegram-user-bot

./: .gitignore  config.example.toml  pyproject.toml
src/: config.py  handlers.py  main.py
